--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: pages_repo
-      - name: Download and install chromedriver
-        run: sudo apt install chromium-chromedriver
+      - name: Install Loconotion dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install beautifulsoup4 toml
+          pip install "selenium>=4.0.0,<5.0.0" requests urllib3
       - name: Install Loconotion dependencies
         run: |
           python3 -m pip install --upgrade pip  
