--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           pip install beautifulsoup4 toml
-          pip install "selenium>=4.0.0,<5.0.0" requests urllib3
-      - name: Install Loconotion dependencies
-        run: |
-          python3 -m pip install --upgrade pip  
-          pip install beautifulsoup4 toml
-          pip install "selenium>=4.0.0,<5.0.0" requests urllib3
+          pip install "selenium>=4.0.0,<5.0.0" requests urllib3 chromedriver_autoinstaller
       - name: Run Loconotion
         run: |
           python3 loconotion/loconotion --chromedriver chromedriver "pages_repo/site.toml"
